crates/dishaster-trial/tests/snapshots/trial_201718ff221a3556.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 2312344417745909078
  trigger_topic: appeal
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 98
        text: "你们[高峰时段排队]太夸张了，\\排了二十分钟还没打上饭，\\就不能增加服务窗口吗？"
        emotion: ⏰
      - id: 97
        text: "你们[清真窗口]的标识不清楚，\\我差点就误点了非清真菜品，\\这很不尊重我们的饮食习惯！"
        emotion: 😤
      - id: 100
        text: "你们[菜品标签]太不明显了，\\很多菜都不知道是什么，\\特别是辣度也没有标注。"
        emotion: ❓
      - id: 33
        text: "门口的[指示牌]写得不清楚，\\找不到菜品摊位，\\你们能不能把布局改清楚点？"
        emotion: 😱
        gesture: 👍
    response_options: ~
    selected_response: ~
    manager_speeches: ~
    impact: ~
    continuation_decision: ~
final_state:
  total_turns: 1
  asked_questions:
    - 98
    - 97
    - 100
    - 33
  continuation_depth: 0
