crates/dishaster-trial/tests/snapshots/trial_8bc6e858d0501168.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 10071993084810367336
  trigger_topic: tableware
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 81
        text: "刚才那个[服务员]态度太差了，\\盛菜时直接甩勺，\\汤都溅我脸上了！"
        emotion: 😠
      - id: 45
        text: "你们把[菜名]写得太模糊，\\我点的口味完全不对，\\能不能标准化一下？"
        emotion: 😰
        gesture: 👎
        topic: quality
    response_options:
      - speech_id: 81
        keywords:
          - keyword: 服务员
            options:
              - id: 0
                kind: agreement
                summary: 立即处理
              - id: 170
                kind: perjury
                summary: 你站太近了
              - id: 182
                kind: perjury
                summary: 新厨师
      - speech_id: 45
        keywords:
          - keyword: 菜名
            options:
              - id: 82
                kind: objection
                summary: 解释出品差异
              - id: 185
                kind: question
                summary: 看清了吗
              - id: 211
                kind: agreement
                summary: 完善标识
              - id: 243
                kind: agreement
                summary: 优化标签
    selected_response:
      speech_id: 81
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 170
        summary: 你站太近了
        text: "可能是您靠得太近，\\才被汤汁溅到，不是故意的。"
        emotion: 🙄
    impact:
      reputation_score: -1.0910001
      mood_change: -0.10910001
      trust_change: -0.054550003
      patience_change: -2.1820002
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 81
    - 45
  continuation_depth: 0
