crates/dishaster-trial/tests/snapshots/trial_8f3dfa98020e7942.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 10321681451779520834
  trigger_topic: hygiene
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 78
        text: "这[水果]有发霉的痕迹，\\看起来像放了很久，\\我不敢再买了。"
        emotion: 😠
        gesture: ✋
        topic: hygiene
    response_options:
      - speech_id: 78
        keywords:
          - keyword: 水果
            options:
              - id: 106
                kind: agreement
                summary: 回收并检验可疑批次
              - id: 10
                kind: question
                summary: 是否保留样品？
              - id: 165
                kind: question
                summary: 能给我看
              - id: 110
                kind: agreement
                summary: 下架霉变水果并更换
    selected_response:
      speech_id: 78
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 10
        summary: 是否保留样品？
        text: "请尽量保留\\可疑样品并拍照，\\这有助于我们做出\\准确判定。"
        emotion: 🤔
      - id: 2
        summary: 需要证据吗？
        text: "能否请您提供\\照片或样品，\\以便我们核实\\并加快处理流程？"
        emotion: 🤔
        gesture: ❓
    impact:
      reputation_score: -0.615
      mood_change: -0.0615
      trust_change: -0.03075
      patience_change: -1.23
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 78
  continuation_depth: 0
